# TNC-Model-2025

./: .gitignore  .replit  FINAL_STATUS.md  MIGRATION_COMPLETE.md  README.md  SETUP.md  SUMMARY.md  all_projections.csv  app.py  check_db.py  check_lowest_scorer.py  cleaned_nfl_players.csv  compare_sources.py  compute_player_week_stats.ipynb  data_validation.ipynb  database.py  database_league.py  database_summary.py  example_league_usage.py  instructions.md  league.db  league_control.ipynb  main.py  match_projections_to_sleeper.ipynb  migrate_simulations_to_montecarlo.py  models.py  nfl_players.csv  nfl_players_export.csv  post_scraping_processing.ipynb  projections.db  projections_control.ipynb  pyproject.toml  replit.md  replit_auth.py  requirements.txt  scraper_espn.py  scraper_fanduel.py  scraper_fantasypros.py  scraper_firstdown.py  scraper_sleeper.py  (+7 more)
app/: __init__.py  main.py  manage.py  settings.py
app/api/: __init__.py  deps.py  teams.py
app/db/: __init__.py  database.py  models.py  schema.sql
app/ingest/: __init__.py  actuals_espn.py  http.py  mapping.py  proj_dff.py  proj_espn.py  proj_fanduel.py  proj_sleeper.py  proj_walter.py  projections.py  sleeper.py
backend/notebooks/: 01_league_control.ipynb  02_projections_control.ipynb  03_post_scraping_processing.ipynb  04_match_projections_to_sleeper.ipynb  05_compute_player_week_stats.ipynb  06_team_lineup_optimizer.ipynb  07_monte_carlo_simulations.ipynb  Post-Week Analysis.ipynb  nfl_players.csv
backend/scrapers/: database.py  database_league.py  database_users.py  (+6 more)
instance/: betting_app.db
(+38 files in other folders)
