[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tnc-model-2025"
version = "0.1.0"
description = "Sleeper league ingestion and API service"
authors = [{name = "TNC"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer[all]>=0.12",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "anyio>=4.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]

[project.scripts]
manage = "app.manage:app"

[tool.setuptools]
packages = ["app", "app.api", "app.db", "app.ingest"]

